ci: bump detekt to 1.23.6 and use ktlint via detekt